# sdiff

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml  coverage.yml
.ide-settings/jetbrains/runConfigurations/: Clippy default-features.run.xml  Clippy no-std.run.xml  Clippy sdiff.run.xml  Clippy.run.xml  Test default-features.run.xml  Test no-std.run.xml  Test sdiff.run.xml  Test.run.xml
src/: lib.rs  tests.rs
