[package]
name = "sdiff"
version = "0.1.1"
authors = ["haraldmaida"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.78.0"
repository = "https://github.com/innoave/sdiff"
readme = "README.md"

description = "Find the differences between two sequences"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
std = []

[dependencies]
libm = "0.2"

[dev-dependencies]
asserting = "0.4"
proptest = "1"

[lints.rust]
unsafe_code = "forbid"
unstable_features = "forbid"
bare_trait_objects = "warn"
deprecated = "warn"
explicit_outlives_requirements = "warn"
noop_method_call = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
dead_code = "warn"
missing_docs = "warn"
variant_size_differences = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
enum_glob_use = "deny"
expect_used = "deny"
future_not_send = "allow"
if_not_else = "allow"
missing_const_for_fn = "warn"
module_name_repetitions = "allow"
option_if_let_else = "allow"
print_stderr = "deny"
print_stdout = "deny"
unwrap_used = "deny"
missing_errors_doc = "allow"  # remove when working on docs
missing_panics_doc = "allow"  # remove when working on docs
